RESOLVED FIXED320041
[Site Isolation] Zoom-to-reveal mispositions the focused element when the selection is in a cross-origin iframe
https://bugs.webkit.org/show_bug.cgi?id=320041
Summary [Site Isolation] Zoom-to-reveal mispositions the focused element when the sel...
zak ridouh
Reported 2026-07-22 18:03:24 PDT
-[WKContentView _zoomToRevealFocusedElement] intersected the selection rect (in the selection's own subframe coordinates) with interactionRect (already in main-frame coordinates). Under site isolation these differ for an offset iframe, so the reveal targeted the wrong place. Convert the selection rect to main-frame coordinates before intersecting, matching 59c6b9895dec. The conversion is synchronous and identity for a main-frame selection, so existing behavior is unchanged; only a cross-origin subframe selection takes the async path, from a completion handler that re-validates focus state.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-07-22 18:03:31 PDT
zak ridouh
Comment 2 2026-07-22 18:18:05 PDT
EWS
Comment 3 2026-09-01 07:18:20 PDT
Committed 320242@main (9543685f56f5): <https://commits.webkit.org/320242@main> Reviewed commits have been landed. Closing PR #69992 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.